# smart-gym

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py  storage.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  ai_conversation.py  ai_message.py  ai_provider_config.py  device_metric.py  exercise.py  leaderboard_refresh_state.py  leaderboard_snapshot.py  nutrition_log.py  nutrition_plan.py  nutrition_plan_meal.py  nutrition_plan_version.py  pose_detection_result.py  training_plan.py  training_plan_item.py  training_plan_version.py  user.py  user_profile.py  workout_mode.py  workout_session.py  workout_session_step.py  workout_template.py  workout_template_step.py
backend/tests/: conftest.py  test_ai_coach_training_plans.py  test_ai_conversations.py  test_ai_provider_configs.py  test_auth.py  test_content_admin.py  test_database_models.py  test_devices.py  test_exercise_seed.py  test_leaderboard.py  test_nutrition.py  test_nutrition_plan_models.py  test_nutrition_plans.py  test_nutrition_reconciliation.py  test_phase2_models.py  test_phase3_models.py  test_phase4_models.py  test_phase5_models.py  test_pose_detection.py  test_storage.py  test_today_training.py  test_training_loop_models.py  test_training_plan_routes.py  test_training_plans.py  test_training_reconciliation.py  test_user_profiles.py  test_workout_session_lifecycle.py  test_workout_sessions.py  test_workout_templates.py
frontend/: index.html  (+4 more)
(+108 files in other folders)
